--- a/ecommerce/pubspec.yaml
+++ b/ecommerce/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   flutter_layout_grid: 2.0.5
   flutter_rating_bar: 4.0.1
   go_router: 14.0.2
-  flutter_riverpod: 2.4.6
+  flutter_riverpod: ^2.5.1
   riverpod_annotation: 2.3.1
   rxdart: 0.27.7
   sembast: 3.5.0+1
