--- a/ecommerce/pubspec.yaml
+++ b/ecommerce/pubspec.yaml
@@ -21,10 +21,11 @@ dependencies:
   go_router: 14.0.2
   flutter_riverpod: ^2.5.1
   riverpod_annotation: 2.3.1
-  rxdart: 0.27.7
+  rxdart: ^0.27.7
   sembast: 3.5.0+1
   sembast_web: 2.2.0
   path_provider: 2.1.1
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
